Rename all references to "iso-svg" to "PolygonJS".

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "iso-svg",
+  "name": "PolygonJS",
   "version": "0.0.0",
-  "homepage": "https://github.com/WebSeed/iso-svg",
+  "homepage": "https://github.com/WebSeed/PolygonJS",
   "authors": [
     "Will Bamford <w.bamford@gmail.com>"
   ],
