--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "iso-svg",
+  "name": "PolygonJS",
   "author": {
     "name": "Will Bamford",
     "email": "w.bamford@gmail.com"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/WebSeed/iso-svg"
+    "url": "https://github.com/WebSeed/polygonjs"
   },
   "devDependencies": {
     "grunt-contrib-jshint": "~0.10.0",
